fix(collapse): fixes alignment and icon sizing

--- a/src/components/SCollapse/SCollapse.scss
+++ b/src/components/SCollapse/SCollapse.scss
@@ -11,10 +11,12 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: spacing('half');
+    text-align: left;
     width: 100%;
   }
 
   &__icon {
+    flex: 0 0 auto;
     margin-left: spacing('half');
     transition: all duration() easing();
   }
